# examplecpplib

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  compile_commands.json
cmake/: README.md
examples/: README.md
examples/factorial/: CMakeLists.txt  main.cpp
lib/: README.md
mylib/: CMakeLists.txt  README.md
mylib/include/: mylib.h
mylib/src/: mylib.cpp
tests/: CMakeLists.txt  README.md
tests/src/: factorial.cpp
